Fixing work title on work page on tablet size

--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -309,6 +309,10 @@
       width: 200%;
     }
   }
+
+  .work-carousel-title {
+    font-size: $font-size-lg;
+  }
 }
 
 @media (max-width: 480px) {
